# fastapi-template

./: .gitignore  Makefile  README.md  alembic.ini  install-poetry.sh  pyproject.toml  requirements.txt  setup.py
app/: .env.example  alembic.ini  config.py  dependencies.py  main.py
app/crud/: base.py  crud_windbox.py
app/db/: database.py  session.py
app/migrations/: env.py
app/migrations/versions/: 453f6242792c_initial_revision.py  869252dbae7a_add_hostname_col_to_windbox.py
app/models/: models_windbox.py  models_wireguard.py  windbox.py
app/routers/: windbox.py  wireguard.py
app/schemas/: schemas_windbox.py  windbox.py
app/utils/: feature_flags.py
tests/: conftest.py  test_windbox.py
tests/api/: endpoint.py  test_windbox.py
tests/utils/: test_feature_flags.py
